--- a/appsettings.json
+++ b/appsettings.json
@@ -1,12 +1,15 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "ConnectionStrings": {
-        "CrudCS": "server=localhost\\SQLEXPRESS; database=EmpCrudDB; Integrated Security=True; MultipleActiveResultSets=true; TrustServerCertificate=True;"
-    },
-    "AllowedHosts": "*"
+  "AppSettings": {
+    "Token":  "my top secret key"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "ConnectionStrings": {
+    "CrudCS": "server=localhost\\SQLEXPRESS; database=EmpCrudDB; Integrated Security=True; MultipleActiveResultSets=true; TrustServerCertificate=True;"
+  },
+  "AllowedHosts": "*"
 }
